--- a/src/pages/Recurring/index.scss
+++ b/src/pages/Recurring/index.scss
@@ -1,8 +1,10 @@
 @layer components {
   .recurring {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    flex: 1;
+    background-color: var(--surface);
+    color: var(--text);
 
     &__add-button {
       display: flex;
